# Rheinwerk_Praxisseminar_GenAI

./: AGENTS.md  pyproject.toml  requirements.txt
.claude/agents/: code-change-analyzer.md
.claude/skills/humanizer/: SKILL.md
agentic_coding_mcp/: .coverage  .env.example  LICENSE  README.md  claude_desktop_config_example.json  pyproject.toml
agentic_coding_mcp/ai_docs/: PRD.md
agentic_coding_mcp/src/tavily_mcp/: __init__.py  __main__.py  server.py
agentic_coding_mcp/tests/: __init__.py  test_e2e.py  test_server.py
scripts/D01_LLM/: 10_model_chat_openrouter.py  32_prompt_hub_assumption.py  41_simple_chain_with_callback.py  45_semantic_router.py  50_parallel_chain.py  72_structured_output_movies.py  chat_openrouter.py
scripts/D02_VectorDB_RAG/: RAG01_data_prep.py  RAG02_app.py  url_context.py
scripts/D02_VectorDB_RAG/10_data_loading/: 10_single_text_file.py  11_single_text_file_web.py  20_multiple_text_files.py  extract_images_from_pdf.py  load_mult_docs.py  load_pdf_image.py
scripts/D02_VectorDB_RAG/db/: chroma.sqlite3
scripts/D02_VectorDB_RAG/table_rag/: coffee_sales.db  gradio_app.py  table_rag.py
scripts/D03_Agents/: AgentLangchain_wo.ipynb  ag2_conversation.py
scripts/D03_Agents/openai_agents/: agents_handoff.py  agents_single_agent.py  agents_tools.py
unsere_skripte/: chat_ollama.py  chat_openrouter.py  chat_openrouter_multimodal.py  chat_openrouter_structured_output.py  chat_openrouter_w_websearch.py  our_mcp_server.py  rag.py  test.py  vector_db_creation.py  vector_db_retrieval.py
unsere_skripte/weltliteratur/: index.faiss  index.pkl
